# ojichat_rs

./: Cargo.toml  README.md  README.tpl
.github/workflows/: release.yaml
examples/: main.rs
src/: generator.rs  lib.rs  main.rs  pattern.rs
src/generator/: mod.rs
src/pattern/: emoji_tag.rs  emoji_type.rs  ojisan_emotion.rs  onara.rs  onara_messages.rs  onara_pattern.rs  tag_type.rs  tags.rs
