[package]
name = "ojichat"
version = "0.1.2"
authors = ["Tatsumi Gamou <tatsumigamou@yahoo.co.jp>"]
edition = "2018"

description = 'Ojisan Nanchatte (ojichat) library for rust'

repository = "https://github.com/gamoutatsumi/ojichat_rs"

readme = "README.md"

license = "MIT"

[dependencies]
gimei = "0.1.1"
kanaria = "0.2.0"
lindera = { git = "https://github.com/gamoutatsumi/lindera.git" }
lindera-core = { git = "https://github.com/gamoutatsumi/lindera.git" }
once_cell = "1.5.2"
rand = "0.7.3"
regex = "1.4.2"

[dev-dependencies]
rusty-hook = "0.11.2"
