[package]
name = "ojichat"
version = "0.1.3"
authors = ["Tatsumi Gamou <tatsumigamou@yahoo.co.jp>"]
edition = "2018"

description = 'Ojisan Nanchatte (ojichat) library for rust'

repository = "https://github.com/gamoutatsumi/ojichat_rs"

readme = "README.md"

license = "MIT"

[dependencies]
gimei = "0.1.1"
kanaria = "0.2.0"
lindera = "0.7.1"
lindera-core = "0.7.1"
once_cell = "1.5.2"
rand = "0.8.0"
regex = "1.4.2"

[dev-dependencies]
rusty-hook = "0.11.2"
